--- a/app/views/deadlines/show.html.erb
+++ b/app/views/deadlines/show.html.erb
@@ -1,8 +1,58 @@
-<%= render 'deadlines/header', project: project, deadline: deadline %>
+<div class="issues-header">
+  <div class="issues-project">
+    <img class="issues-avatar" src="<%= project.owner.avatar_url %>" alt="<%= project.owner.name %>">
+    <span class="issues-project-name"><%= project.full_name %></span>
+  </div>
+  <%= link_to "View projects", projects_path, class: "issues-view-projects" %>
+</div>
 
-<h4>Tasks</h4>
-<% tasks.each do |task| %>
-  <h5><%= task.title %></h5>
-  <p>State: <%= task.state %></p>
-  <%= sanitize task.description_html %>
-<% end %>
+<div class="issues-milesone-wrapper">
+  <div class="issues-milesone">
+    <h2 class="issues-milesone-name"><%= deadline.name %></h2>
+    <ul class="issues-milesone-countdown js-countdown-big" data-epoch-seconds="<%= deadline.due_on.to_i %>">
+      <li class="issues-milesone-interval">
+        <div class="issues-milesone-number js-countdown-days">00</div>
+        <div class="issues-milesone-label">days</div>
+      </li>
+      <li class="issues-milesone-interval">
+        <div class="issues-milesone-number js-countdown-hours">00</div>
+        <div class="issues-milesone-label">hours</div>
+      </li>
+      <li class="issues-milesone-interval">
+        <div class="issues-milesone-number js-countdown-minutes">00</div>
+        <div class="issues-milesone-label">minutes</div>
+      </li>
+    </ul>
+    <div class="milestones-overview">
+      <%= link_to project.to_path do %>
+        <span>Milestones overview</span>
+      <% end %>
+    </div>
+  </div>
+</div>
+
+<div class="issues-wrapper">
+  <div class="issues-stats">
+    <div>
+      <h3 class="issues-title">Issues</h3>
+      <p class="issues-stats-summary">
+      <strong><%= deadline.open_issues %></strong> open,
+      <strong><%= deadline.closed_issues %></strong> closed
+      </p>
+    </div>
+    <p class="issues-stats-progress"><%= deadline.completion_percentage.round %>%</p>
+  </div>
+  <ul class="issues">
+    <% tasks.each do |task| %>
+    <li class="issue">
+      <a class="issue-name" href="<%= task.html_url %>" target="_blank">
+        <%= task.name %>
+        <% task.labels.each do |lbl| %>
+          <span class="issue-label"><%= lbl %></span>
+        <% end %>
+      </a>
+      <p class="issue-details">#<%= task.number %> opened <%= ago_or_from_now(task.created_at) %> by <%= task.user.login %></p>
+    </li>
+    <% end %>
+  </ul>
+</div>
