Adds link slug editing + copy function

--- a/app/views/dashboards/_form.html.erb
+++ b/app/views/dashboards/_form.html.erb
@@ -6,6 +6,6 @@
   <%= f.input :password %>
   <%= f.input :show_tasks %>
   <%= f.input :published %>
-
+  <%= f.input :link_slug, label: 'x/' %>
   <%= f.submit %>
 <% end %>
