More dashboard form design!

--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -25,6 +25,26 @@
     width: $labelWidth - 10px;
   }
 
+  input[type="submit"],
+  .btn {
+    cursor: pointer;
+    display: inline-block;
+    line-height: 32px;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 16px;
+    font-weight: bold;
+    border: 2px solid #08F;
+    color: #444;
+    background-color: #fff;
+    text-decoration: none;
+    box-sizing: border-box;
+
+    &.default {
+      border: 2px solid #81848A;
+    }
+  }
+
   .input {
     .hint {
       display: block;
