--- a/app/views/dashboards/_form.html.erb
+++ b/app/views/dashboards/_form.html.erb
@@ -10,5 +10,8 @@
   <%= f.input :show_tasks %>
   <%= f.input :published %>
   <%= f.input :link_slug, label: "#{root_url}x/" %>
-  <%= f.submit %>
+  <p class="text-right">
+    <%= link_to "Cancel", projects_path, class: "btn default" %>
+    <%= f.submit %>
+  </p>
 <% end %>
