Update copy-url component

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,7 @@ $nprogress-color: #0088ee;
 /*$nprogress-zindex: 10100;*/
 
 $input_mono_narrow_bold: "input_mono_narrow_bold", monospace;
+$font_mono: Monaco, Courier, monospace;
 $fonts_url_fallback: 'fonts/';
 // $fonts_url: 'http://d2zrsw3u8lkijg.cloudfront.net/fonts/';
 $fonts_url: 'fonts/';
