--- a/app/views/dashboards/_form.html.erb
+++ b/app/views/dashboards/_form.html.erb
@@ -12,6 +12,6 @@
   <%= f.input :link_slug, label: "#{root_url}x/" %>
   <p class="text-right">
     <%= link_to "Cancel", projects_path, class: "btn default" %>
-    <%= f.submit %>
+    <%= f.submit class: 'btn primary' %>
   </p>
 <% end %>
