--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -3,29 +3,8 @@
   $labelWidth: $w / 2;
   width: $w;
   margin: 0 auto;
-  border-top: 1px solid #EDEDED;
 
-  div.input {
-    margin-bottom: 7px;
-    margin-top: 7px;
-  }
 
-  label {
-    width: $labelWidth;
-    display: inline-block;
-    line-height: 1.5;
-
-    abbr { display: none; }
-  }
-
-  input[type="text"],
-  input[type="password"]
-  {
-    padding: 3px;
-    width: $labelWidth - 10px;
-  }
-
-  input[type="submit"],
   .btn {
     cursor: pointer;
     display: inline-block;
@@ -43,37 +22,94 @@
     &.default {
       border: 2px solid #81848A;
     }
-  }
 
-  .input {
-    .hint {
-      display: block;
-      color: #999;
+    &.primary {
+      border: 2px solid #08F;
+    }
+
+    &:hover {
+      background: #eee;
+    }
+
+    &:focus, &:active {
+      background: #ddd;
     }
   }
 
-  .boolean {
+  form {
+    border-top: 1px solid #EDEDED;
+
+    div.input {
+      margin-bottom: 7px;
+      margin-top: 7px;
+    }
+
     label {
-      margin-left: $labelWidth;
+      width: $labelWidth;
+      display: inline-block;
+      line-height: 1.5;
+
+      abbr { display: none; }
     }
+
+    input[type="text"],
+    input[type="password"]
+    {
+      padding: 3px;
+      width: $labelWidth - 10px;
+    }
+
+    .input {
+      .hint {
+        display: block;
+        color: #999;
+      }
+    }
+
+    .boolean {
+      label {
+        margin-left: $labelWidth;
+      }
+
+      input {
+        margin-right: 5px;
+      }
+
+      .hint {
+        margin-left: $labelWidth;
+      }
+    }
+
+    .dashboard_link_slug {
+      label, input {
+        font-size: 12px;
+        font-family: $font_mono;
+      }
+
+      label {
+        /*width: auto;*/
+        text-align: right;
+      }
+    }
+  }
+
+  .copy-url {
+    $btnW: 80px;
+    margin: 15px 0;
 
     input {
-      margin-right: 5px;
+      font-family: $font_mono;
+      line-height: 37px;
+      padding: 0 10px;
+      width: $w - $btnW - 28px;
     }
 
-    .hint {
-      margin-left: $labelWidth;
-    }
-  }
-
-  .dashboard_link_slug {
-    label, input {
-      font-family: monospace;
-    }
-
-    label {
-      /*width: auto;*/
-      text-align: right;
+    .btn {
+      line-height: 31px;
+      padding-top: 1px;
+      padding-bottom: 3px;
+      width: $btnW;
     }
   }
 }
+
