--- a/app/views/dashboards/edit.html.erb
+++ b/app/views/dashboards/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="projects-header">
-  <img class="projects-avatar" src="<%= github_user.avatar_url %>" alt="<%= github_user.name %>">
+  <%= user_avatar(github_user) %>
   <p class="projects-instructions">
   Configure a public dashboard
   </p>
