Renamed link_slug to slug

--- a/app/views/dashboards/_form.html.erb
+++ b/app/views/dashboards/_form.html.erb
@@ -9,7 +9,7 @@
   <%= f.input :password %>
   <%= f.input :show_tasks %>
   <%= f.input :published %>
-  <%= f.input :link_slug, label: "#{root_url}x/" %>
+  <%= f.input :slug, label: "#{root_url}x/" %>
   <p class="text-right">
     <%= link_to "Cancel", projects_path, class: "btn default" %>
     <%= f.submit class: 'btn primary' %>
