Hide duplicate link. Use slug instead of link_slug

--- a/app/views/dashboards/edit.html.erb
+++ b/app/views/dashboards/edit.html.erb
@@ -12,8 +12,8 @@
   <h3>Sharing link</h3>
   <% if dashboard.valid? %>
     <div class="copy-url">
-      <input type="text" value="<%= show_dashboard_url(dashboard.link_slug) %>" />
-      <a data-clipboard-text="<%= show_dashboard_url(dashboard.link_slug) %>"
+      <input type="text" value="<%= show_dashboard_url(dashboard.slug) %>" />
+      <a data-clipboard-text="<%= show_dashboard_url(dashboard.slug) %>"
          class="btn default js-copy-button">
         Copy
       </a>
@@ -22,8 +22,3 @@
     <p>Save the dashboard first.</p>
   <% end %>
 <div>
-
-<% if dashboard.valid? %>
-  <div><%= show_dashboard_url(dashboard.slug) %></div>
-  <a id="copy_button" data-clipboard-text="<%= show_dashboard_url(dashboard.slug) %>">Copy</a>
-<% end %>
