--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -54,7 +54,7 @@
       }
     }
 
-    .dashboard_link_slug {
+    .dashboard_slug {
       label, input {
         font-size: 12px;
         font-family: $font_mono;
