--- a/app/views/layouts/_flashes.html.erb
+++ b/app/views/layouts/_flashes.html.erb
@@ -1,7 +1,7 @@
-  <% if notice %>
-    <p><strong style='color: blue'><%= notice %></strong></p>
-  <% end %>
+<% if notice %>
+  <p class="flash-notice"><%= notice %></p>
+<% end %>
 
-  <% if alert %>
-    <p><strong style='color: red'><%= alert %></strong></p>
-  <% end %>
+<% if alert %>
+  <p class="flash-alert"><%= alert %></p>
+<% end %>
