--- a/app/views/layouts/simple.html.erb
+++ b/app/views/layouts/simple.html.erb
@@ -4,5 +4,14 @@
 <body>
   <%= render 'layouts/flashes' %>
   <%= yield %>
+  <script type="text/javascript">
+  var rumbleBannerBackgroundColor, rumbleBannerTextColor, rumbleBannerLinkColor, rumbleBannerPlacement;
+      rumbleBannerBackgroundColor = "#161616";
+      rumbleBannerBackgroundColor = "#333333";
+      rumbleBannerTextColor = "#b0b0b0";
+      rumbleBannerLinkColor = "#ffffff";
+      rumbleBannerPlacement = "bottom"; // Optionally replace with "bottom".
+  </script>
+  <script src="https://d4nnn7wspfa3h.cloudfront.net/banner-2015.js" type="text/javascript"></script>
 </body>
 </html>
