--- a/app/assets/stylesheets/components/_pagination.scss
+++ b/app/assets/stylesheets/components/_pagination.scss
@@ -6,6 +6,7 @@
   margin-top: 40px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 50px; // railsrumble banner
 
   .first,
   .last,
