Link to /x/deadliner as demo

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
   <h2 class="definition">Turn Github milestones into fun countdowns</h2>
   <div class="call-to-action">
     <%= link_to "Sign in", user_omniauth_authorize_path(:github), class: 'sign-in-github' %>
-    <%= link_to "See a demo", '#', class: 'see-a-demo' %>
+    <%= link_to "See a demo", '/x/deadliner', class: 'see-a-demo' %>
   </div>
 </div>
 
