Add separate password form for dashboard, wip

--- a/app/views/dashboards/_form.html.erb
+++ b/app/views/dashboards/_form.html.erb
@@ -1,15 +1,9 @@
-<%= simple_form_for dashboard do |f| %>
+<%= simple_form_for dashboard, html: {id: 'general-form'} do |f| %>
   <%= f.input :project_uid, disabled: true %>
-
-  <div class="input">
-  <%= f.label "Password protect" %>
-  <%= check_box_tag "Password protect" %>
-  </div>
-
-  <%= f.input :password %>
   <%= f.input :show_tasks %>
   <%= f.input :published %>
   <%= f.input :slug, label: "#{root_url}x/" %>
+
   <p class="text-right">
     <%= link_to "Cancel", projects_path, class: "btn default" %>
     <%= f.submit class: 'btn primary' %>
