--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -1,3 +1,7 @@
+#password-form {
+  display: none;
+}
+
 .dashboard-form {
   $w: 520px;
   $labelWidth: $w / 2;
@@ -84,6 +88,30 @@
       padding-bottom: 3px;
       width: $btnW;
     }
+  }
+
+  ul {
+    font-size: 18px;
+    font-weight: bold;
+    color: #81848A;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top: 10px;
+    cursor: pointer;
+  }
+
+  li {
+    display: inline;
+    padding: 10px;
+    border-radius: 5px;
+  }
+
+  li.active {
+    background-color: #e9e9e9;
+  }
+
+  span {
+    color: #999;
   }
 }
 
