--- a/app/views/dashboards/_password_form.html.erb
+++ b/app/views/dashboards/_password_form.html.erb
@@ -2,12 +2,15 @@
   <%= f.hidden_field :project_uid, disabled: true %>
   <%= f.input :password %>
 
-  <p class="text-right">
+  <p class="info">
     <% if dashboard.password_enabled? %>
-      <span>Currently a password is set.</span>
+      <span>Password protection is <strong>enabled</strong>. Save an empty password to disable.</span>
     <% else %>
-      <span>Currently no password is set.</span>
+      <span>Password protection is <strong>disabled</strong>. Save a password to enable.</span>
     <% end %>
+  </p>
+
+  <p>
     <%= link_to "Cancel", projects_path, class: "btn default" %>
     <%= f.submit class: 'btn primary' %>
   </p>
